--- a/svsa-tp/pom.xml
+++ b/svsa-tp/pom.xml
@@ -86,6 +86,12 @@
 			<version>11.0.0</version>
 
 		</dependency>
+		
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>cupertino</artifactId>
+			<version>1.0.11</version>
+		</dependency>
 
 		<dependency>
 
